more ascension shenanigans - UNSTABLE

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -783,7 +783,9 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	building_tec_genetic_archive_recombinator_growth:0 "\n§EFeature:§! §HPopulation Boosters§!\n- £tec_genetics_icon£ $job_tec_gene_recombinator_plural$ increase §Y$tec_loc_organic_assembly$§!.\n\n"
 
 	job_tec_gene_recombinator:0 "Geno-Tailor"
+	job_tec_gene_recombinator_with_icon:0 "£job_tec_gene_recombinator£ Geno-Tailor"
 	job_tec_gene_recombinator_plural:0 "Geno-Tailors"
+	job_tec_gene_recombinator_plural_with_icon:0 "£job_tec_gene_recombinator£ Geno-Tailors"
 	job_tec_gene_recombinator_desc:0 "These skilled researchers are constantly trying to improve the genetic makeup of every citizen."
 	job_tec_gene_recombinator_effect_desc:0 "£job_tec_gene_recombinator£ $job_tec_gene_recombinator_plural$ turn §Y$tec_loc_cg$§! into §Y$tec_loc_society$§!, §Y$tec_loc_unity$§!, §YRecombination Efficiency§! and a secondary bonus based on the decisions of the empire."
 	mod_job_tec_gene_recombinator_add:0 "$job_tec_gene_recombinator$ Jobs"
@@ -791,7 +793,9 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	mod_job_tec_gene_recombinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_add£ per $VALUE$ £pop£"
 
 	job_tec_gene_recombinator_drone:0 "Geno-Weaver"
+	job_tec_gene_recombinator_drone_with_icon:0 "£job_tec_gene_recombinator£ Geno-Weaver"
 	job_tec_gene_recombinator_drone_plural:0 "Geno-Weavers"
+	job_tec_gene_recombinator_drone_plural_with_icon:0 "£job_tec_gene_recombinator£ Geno-Weavers"
 	job_tec_gene_recombinator_drone_desc:0 "These specialized drones are constantly trying to improve the genetic makeup of every breed of the collective."
 	job_tec_gene_recombinator_drone_effect_desc:0 "£job_tec_gene_recombinator£ $job_tec_gene_recombinator_plural$ turn §Y$tec_loc_basic_resources$§! into §Y$tec_loc_society$§! and a secondary bonus based on the decisions of the empire."
 	mod_job_tec_gene_recombinator_drone_add:0 "$job_tec_gene_recombinator_drone$ Jobs"
@@ -941,12 +945,22 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	building_tec_regular_cybernetic_cortex:0 "Neo-Cortex Facility"
 	building_tec_regular_cybernetic_cortex_plural:0 "Neo-Cortex Facilities"
 	building_tec_regular_cybernetic_cortex_desc:0 "Advanced technological installations where blueprints for improved personality, neural and programming elements are developed non-stop."
-	building_tec_regular_cybernetic_cortex_effect:0 "§EFeature:§! §H£tec_cybernetics_icon£ New programming§!\n- The jobs provided improve the efficiency of the §Y£stability£ $decision_tec_cybernetic_augmentation$§! when focused on §YCortex§! or §YOS Deck§! augment boosting.\n"
+	building_tec_hive_cybernetic_cortex:0 "Neo-Cortex Facility"
+	building_tec_hive_cybernetic_cortex_plural:0 "Neo-Cortex Facilities"
+	building_tec_hive_cybernetic_cortex_desc:0 "$todo_ascension$"
+	building_tec_biohive_cybernetic_cortex:0 "Neo-Cortex Organelle"
+	building_tec_biohive_cybernetic_cortex_plural:0 "Neo-Cortex Organelles"
+	building_tec_biohive_cybernetic_cortex_desc:0 "$todo_ascension$"
+	building_tec_machine_cybernetic_cortex:0 "Neo-Cortex Processor"
+	building_tec_machine_cybernetic_cortex_plural:0 "Neo-Cortex Facilities"
+	building_tec_machine_cybernetic_cortex_desc:0 "$todo_ascension$"
+
+	building_tec_regular_cybernetic_cortex_effect:0 "§EFeature:§! §H£tec_cybernetics_icon£ New programming§!\n- The jobs provided improve the efficiency of the §Y£stability£ $decision_tec_cybernetic_augmentation$§! when focused on §YCortex§! or §YCyberdeck§! augment boosting.\n"
 
 	job_tec_cybernetic_cogitator:0 "Cogitation Developer"
 	job_tec_cybernetic_cogitator_plural:0 "Cogitation Developers"
 	job_tec_cybernetic_cogitator_desc:0 "Directly connected to immense cybernetic databases, their task is to develop new designs, patterns and applications to enhance augmentation efficiency."
-	job_tec_cybernetic_cogitator_effect_desc:0 "£job_tec_cybernetic_cogitator£ $job_tec_cybernetic_cogitator_plural$ turn §YTODO§! into §YTODO§!, and improve §YCortex§! and §YOS Deck§! Augmentation Efficiency§!."
+	job_tec_cybernetic_cogitator_effect_desc:0 "£job_tec_cybernetic_cogitator£ $job_tec_cybernetic_cogitator_plural$ turn §YTODO§! into §YTODO§!, and improve §YCortex§! and §YCyberdeck§! Augmentation Efficiency§!."
 	mod_job_tec_cybernetic_cogitator_add:0 "$job_tec_cybernetic_cogitator$ Jobs"
 	mod_job_tec_cybernetic_cogitator_per_pop:0 "§G+1§! $job_tec_cybernetic_cogitator$ Job per $VALUE$ Pops"
 	mod_job_tec_cybernetic_cogitator_per_pop_short:0 "\n§G+1§! £mod_job_tec_cybernetic_cogitator_add£ per $VALUE$ £pop£"
@@ -955,6 +969,19 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	building_tec_regular_cybernetic_forge:0 "Augmentation Crucible"
 	building_tec_regular_cybernetic_forge_plural:0 "Augmentation Crucibles"
 	building_tec_regular_cybernetic_forge_desc:0 "Massive industries and fabricators ceaseless printing new prosthetics and structural frames for new and potentially new implants, improving every design with each iteration."
+
+	building_tec_hive_cybernetic_forge:0 "Augmentation Crucible"
+	building_tec_hive_cybernetic_forge_plural:0 "Augmentation Crucibles"
+	building_tec_hive_cybernetic_forge_desc:0 "$todo_ascension$"
+
+	building_tec_biohive_cybernetic_forge:0 "Augmentation Crucible"
+	building_tec_biohive_cybernetic_forge_plural:0 "Augmentation Cyst"
+	building_tec_biohive_cybernetic_forge_desc:0 "$todo_ascension$"
+
+	building_tec_machine_cybernetic_forge:0 "Augmentation Crucible"
+	building_tec_machine_cybernetic_forge_plural:0 "Augmentation Crucibles"
+	building_tec_machine_cybernetic_forge_desc:0 "$todo_ascension$"
+
 	building_tec_regular_cybernetic_forge_effect:0 "§EFeature:§! §H£tec_cybernetics_icon£ Forged Chrome§!\n- Improves the efficiency of the §Y£stability£ $decision_tec_cybernetic_augmentation$§! when focused on §YInternal§! or §YExternal§! augment boosting.\n"
 
 	job_tec_cybernetic_forger:0 "Cybernetic Forger"
@@ -965,13 +992,21 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	mod_job_tec_cybernetic_forger_per_pop:0 "§G+1§! $job_tec_cybernetic_forger$ Job per $VALUE$ Pops"
 	mod_job_tec_cybernetic_forger_per_pop_short:0 "\n§G+1§! £mod_job_tec_cybernetic_forger_add£ per $VALUE$ £pop£"
 
-
 	decision_tec_cybernetic_augmentation:0 "£tec_cybernetics_icon£ Start Augmentation"
 	decision_tec_cybernetic_augmentation_desc:0 "The process for fine-tuning of cybernetic augmentations will start; the current colony labs and installations will coordinate the process at our whole empire, allowing the improvement of any existing implant."
-	decision_tec_cybernetic_augmentation_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation is taking place."
+	decision_tec_cybernetic_augmentation_ongoing:0 "$TRIGGER_FAIL$An ongoing §Y£stability£ $situation_tec_ascension_cybernetic_overclock$§! situation is taking place."
 	decision_tec_cybernetic_augmentation_require_cybernetic_building:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_cybernetic_cortex$§! or §Y£building£ $building_tec_regular_cybernetic_forge$§! ."
 	decision_tec_cybernetic_augmentation_require_cybernetic_building_biohive:0 "$TRIGGER_FAIL$Requires an active §Y£building£ $building_tec_regular_cybernetic_cortex$§! or §Y£building£ $building_tec_regular_cybernetic_forge$§! ."
-	decision_tec_cybernetic_augmentation_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_genetic_recombination$§! situation, allowing the upgrade of cybernetic augmentation categories, improving the performance of traits in a batch."
+	decision_tec_cybernetic_augmentation_tooltip:0 "Starts the §Y£stability£ $situation_tec_ascension_cybernetic_overclock$§! situation, allowing the upgrade of cybernetic augmentation categories, improving the performance of traits in a batch."
+
+	council_agenda_agenda_tec_cybernetic_overclock_name:0 "Cybernetic Overdrive"
+	council_agenda_agenda_tec_cybernetic_overclock_desc:0 "Focusing our resources towards the production and improvement of cybernetic augmentations will for sure allow more flexible modules and a wider range of efficiency with lesser costs or potential defects amongst all our controlled colonies."
+	council_agenda_agenda_tec_cybernetic_overclock_regular_tooltip:0 "£tec_cybernetics_icon£ Augmentation Jobs contribution towards £stability£ $situation_tec_ascension_cybernetic_overclock$ situation: §Y+50%§!"
+	council_agenda_agenda_tec_cybernetic_overclock_gestalt_tooltip:0 "£tec_cybernetics_icon£ Augmentation Drones contribution towards £stability£ $situation_tec_ascension_cybernetic_overclock$ situation: §Y+50%§!"
+	modifier_tec_agenda_tec_cybernetic_overclock_finish:0 "$council_agenda_agenda_tec_cybernetic_overclock_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_cybernetic_overclock_finish_desc:0 "$council_agenda_agenda_tec_cybernetic_overclock_desc$"
+
+	tec_agenda_require_no_active_overclock_or_cd:0 "TODO ASCENSION"
 
 	mod_tec_cyborg_mainframe_value_mult:0 "Mainframe Overclock"
 	mod_tec_cyborg_mainframe_upkeep_mult:0 "Mainframe Overcharge"
