--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -710,6 +710,18 @@
 
 # ------------------------------------------------- GENETICS
  # --------------- T1
+	tec_genetic_trait_advanced:0 "§HAdvanced Genetic Trait§!"
+
+	trait_tec_gene_malleability:0 "Gene-Malleable"
+	trait_tec_gene_malleability_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad #of characteristics and new code without risking mutations or excessive biological stress.§!\n"
+	trait_tec_gene_malleability_effect:0 "§EFeature:§! §HMalleable Genes§!\nPer Species Trait point spent:\n- £tec_genetics_icon£ Species trait points: §G+$@trait_tec_genetic_malleability_points_rate$§!\n- $tec_loc_job$ Output: §G+$@trait_tec_genetic_malleability_output_rate_tt$%§!\n\n§ECurrent bonuses:§!"
+
+	mod_tec_gene_malleability_fake_points:0 "$species_trait_points_add$"
+
+	#trait_tec_gene_malleable:0 "Gene-Malleable"
+	#trait_tec_gene_malleable_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad #of characteristics and new code without risking mutations or excessive biological stress.§!"
+	#TRAIT_TEC_GENE_MALLEABLE_EFFECT:0 "Reduces the cost of §HStandard Traits§! by §G1§!, down to §Y0§!."
+
 	trait_tec_virtuous:0 "Virtuous"
 	trait_tec_virtuous_desc:0 "§LThe absolute delicacy and minucious work of this species product is remarkable and undeniabily out of this reality, any other species should be envious of such innate talent and search of perfection.§!\n"
 	TRAIT_TEC_VIRTUOUS_EFFECT:0 "£alloys£ £consumer_goods£ Industrial resources from £job£ Jobs: §G+10%§!"
@@ -741,7 +753,7 @@
 	trait_tec_gene_allows_recombined_traits:0 "Allows the modification of Tailored and §YRecombined§! Traits"
 	trait_tec_gene_allows_perfected_traits:0 "Allows the modification of Tailored, §YRecombined§! and §HPerfected§! Traits"
 
-	trait_tec_gene_perfected_scaling:0 "Main effects are increased by §Y10§!% for every §HPerfected trait§!"
+	trait_tec_gene_perfected_scaling:0 "Main effects are increased by §Y10%§! for every §HPerfected trait§!"
  # /
  # Main
 	trait_tec_gene_perfection:0 "Genetic Perfection"
@@ -1249,7 +1261,7 @@
 	tec_cybernetic_augments_cat_internal_desc:0 "These cybernetic implants are direct substitution of internal organs and structures, or alter the internal physionomy of the species."
 	tec_cybernetic_augments_cat_external:0 "External Augmentation"
 	tec_cybernetic_augments_cat_external_desc:0 "Applied to the body, grafted to the exterior of the species, these cybernetic implants enhance the capacities with extra layers, tools or extremities."
-	tec_cybernetic_augments_cat_deck:0 "OS Deck Augmentation"
+	tec_cybernetic_augments_cat_deck:0 "Cyberdeck Augmentation"
 	tec_cybernetic_augments_cat_deck_desc:0 "Dedicated software and hardware interconnecting other cybernetic implants ensure efficiency or change in operativity."
 
 	tec_cybernetic_augments_cat_unregulated:0 "Unregulated Augmentation"
@@ -1262,13 +1274,13 @@
 	tec_cybernetic_augmentation_cortex:0 "§CCybernetic Augmentation - Cortex§!"
 	tec_cybernetic_augmentation_internal:0 "§CCybernetic Augmentation - Internal§!"
 	tec_cybernetic_augmentation_external:0 "§CCybernetic Augmentation - External§!"
-	tec_cybernetic_augmentation_deck:0 "§CCybernetic Augmentation - OS Deck§!"
+	tec_cybernetic_augmentation_deck:0 "§CCybernetic Augmentation - Cyberdeck§!"
 	tec_advanced_augmentation:0 "§CAdvanced Augmentation§!"
 	tec_advanced_augmentation_mainframe:0 "§CAdvanced Augmentation - Mainframe§!"
 	tec_advanced_augmentation_cortex:0 "§CAdvanced Augmentation - Cortex§!"
 	tec_advanced_augmentation_internal:0 "§CAdvanced Augmentation - Internal§!"
 	tec_advanced_augmentation_external:0 "§CAdvanced Augmentation - External§!"
-	tec_advanced_augmentation_deck:0 "§CAdvanced Augmentation - OS Deck§!"
+	tec_advanced_augmentation_deck:0 "§CAdvanced Augmentation - Cyberdeck§!"
 
 	tec_unregulated_augmentation_deck:0 "§CUnregulated Augmentation§!"
 	tec_reclaimed_augmentation_deck:0 "§CReclaimed Augmentation§!"
@@ -1278,7 +1290,7 @@
 	tec_cybernetic_overcharge_cortex:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other Cortex Augmentations."
 	tec_cybernetic_overcharge_internal:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other Internal Augmentations."
 	tec_cybernetic_overcharge_external:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other External Augmentations."
-	tec_cybernetic_overcharge_deck:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other OS Deck Augmentations."
+	tec_cybernetic_overcharge_deck:0 "§CCyber-Overcharge§!\nThis trait increases its efficiency (§G10%§!) and upkeep (§R33%§!) paired with other Cyberdeck Augmentations."
 
 	tec_cybernetic_overcharge_tt:0 "['concept_tec_cybernetic_overcharge_icon', §HCybernetic Overcharge§!]"
 	tec_cybernetic_overcharge_cortex_tt:0 "['concept_tec_cybernetic_overcharge_icon', §HCortex Overcharge§!]"
@@ -1317,40 +1329,48 @@
 
 	trait_tec_cyborg_mainframe_mech:0 "Mech-Exoframe"
 	trait_tec_cyborg_mainframe_mech_desc:0 "§LBig, ostentatious and heavy external mobilized and modular platforms are integrated with the body and mind of this species, greatly enhancing the user's capabilities and strength while also allowing a really effective execution of any brute-force task, whether if its industrial work or military deployment.§!"
-	trait_tec_cyborg_mainframe_mech_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_mainframe_mech_effect:0 "§YTODO ASCENSION§!\n\n§EMainframe Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk$§!"
 
-	trait_tec_cyborg_mainframe_adaptive:0 "Adaptive Mainframe"
-	trait_tec_cyborg_mainframe_adaptive_desc:0 "§LTODO ASCENSION.§!"
-	trait_tec_cyborg_mainframe_adaptive_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_mainframe_automodding:0 "Adaptive Frame"
+	trait_tec_cyborg_mainframe_automodding_desc:0 "§LInterchangeable modules allow this frame to be extremely versatile when it comes to providing the cyborg species wearing it the needed support.§!"
+	trait_tec_cyborg_mainframe_automodding_effect:0 "$automodding_trait_tooltip_all$\n['concept_trait_tec_cyborg_mainframe_automodding_traits']\n\n§EMainframe Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk$§!"
+
+	concept_trait_tec_cyborg_mainframe_automodding_traits:0 "Auto-Mod Trait List"
+	concept_trait_tec_cyborg_mainframe_automodding_traits_icon:0 "Auto-Mod Trait List"
+	concept_trait_tec_cyborg_mainframe_automodding_traits_help_icon:0 "£trigger_tec_question£"
+	concept_trait_tec_cyborg_mainframe_automodding_traits_desc:0 "Available Automoddable traits:\n- §Y$trait_tec_cyborg_mainframe_automodding$§! can get adapted to the following traits:\n  -['trait:trait_tec_cyborg_mainframe_auto_menial']\n- ['trait:trait_tec_cyborg_mainframe_auto_industrial']\n  -['trait:trait_tec_cyborg_mainframe_auto_intellectual']\n- ['trait:trait_tec_cyborg_mainframe_auto_military']"
 
 	# Tier 2
 	trait_tec_cyborg_mainframe_advanced:0 "Superior Mainframe"
 	trait_tec_cyborg_mainframe_advanced_desc:0 "§LAn advanced robotic construct completely replaces the skeleton of this species, and some organs at a certain degree, creating really durable and resilient individuals, capable of doing tasks formerly unprecedented for a organic being.§!"
-	trait_tec_cyborg_mainframe_advanced_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_mainframe_advanced_effect:0 "§YTODO ASCENSION§!\n§EMainframe Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t2_amenities_upk$§!"
 
-	trait_tec_cyborg_mainframe_combat:0 "Superior Warframe"
-	trait_tec_cyborg_mainframe_combat_desc:0 "§LTODO ASCENSION.§!"
-	trait_tec_cyborg_mainframe_combat_effect:0 "§YTODO ASCENSION§!"
+		# Semidiscarded
+	#trait_tec_cyborg_mainframe_combat:0 "Tactical Warframe"
+	#trait_tec_cyborg_mainframe_combat_desc:0 "§LA platform for war and devastation, this bulky suit allow an incredible lethality and survival when struggling in battle without reducing mobility or increasing exposure.§!"
+	#trait_tec_cyborg_mainframe_combat_effect:0 "§YTODO ASCENSION§!\n\n§EMainframe Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t2_amenities_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_mainframe_tt$\nEfficiency of §YMainframe§! automod modifiers increased by §G$@trait_tec_cyborg_mainframe_super_automodding_boost_rate_tt$%§!\nAuto-Mod traits inherit the Upkeep of this trait."
 
-	trait_tec_cyborg_mainframe_super_adaptive:0 "Adaptive Mainframe"
-	trait_tec_cyborg_mainframe_super_adaptive_desc:0 "§LTODO ASCENSION.§!"
-	trait_tec_cyborg_mainframe_super_adaptive_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_mainframe_super_automodding:0 "Polymorphic Frame"
+	trait_tec_cyborg_mainframe_super_automodding_desc:0 "§LFlexible poly-alloys allow a complete reestructuration of this cybernetic frame to suit any desirable production or task.§!"
+	trait_tec_cyborg_mainframe_super_automodding_effect:0 "$automodding_trait_tooltip_all$\n['concept_trait_tec_cyborg_mainframe_automodding_traits']\n\n§EMainframe Modifiers:§!\n  $tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t2_amenities_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_mainframe_tt$\nEfficiency of §YMainframe§! automod modifiers increased by §G$@trait_tec_cyborg_mainframe_super_automodding_boost_rate_tt$%§!\nAuto-Mod traits inherit the Upkeep of this trait."
 
 	# Automod
-	trait_tec_cyborg_mainframe_auto_menial:0 "Module - Extraction Devices"
+	tec_mainframe_module_not_moddable:0 "£trigger_no£ §RThis module is adapted to an $trait_tec_cyborg_mainframe_super_automodding$ configuration and is not moddable as standalone.§!"
+
+	trait_tec_cyborg_mainframe_auto_menial:0 "Frame - Extraction Devices"
 	trait_tec_cyborg_mainframe_auto_menial_desc:0 "§LThis species warframe has been adapted to host several tools for resource extraction.§!"
 	trait_tec_cyborg_mainframe_auto_menial_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_mainframe_auto_industrial:0 "Module - Industrial Equipment"
+	trait_tec_cyborg_mainframe_auto_industrial:0 "Frame - Industrial Equipment"
 	trait_tec_cyborg_mainframe_auto_industrial_desc:0 "§LA reinforced set of tools for industrial production of resources and different amenities is implanted in the cybernetic frame of this species.§!"
 	trait_tec_cyborg_mainframe_auto_industrial_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_mainframe_auto_intellectual:0 "Module - Intellectual Appliances"
+	trait_tec_cyborg_mainframe_auto_intellectual:0 "Frame - Intellectual Appliances"
 	trait_tec_cyborg_mainframe_auto_intellectual_desc:0 "§LWith a dyrect neural connection to higher-grade implants, these appliances ensure a safe and streamlined development of technological and social duties.§!"
 	trait_tec_cyborg_mainframe_auto_intellectual_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_mainframe_auto_military:0 "Module - Mili-Grade Gear"
-	trait_tec_cyborg_mainframe_auto_military_desc:0 "§LState-of-the-art weapons and controllers are mounted in the frame of these cyborgs, greatly increasing the output of military and naval related operations.§!"
+	trait_tec_cyborg_mainframe_auto_military:0 "Frame - Mili-Grade Gear"
+	trait_tec_cyborg_mainframe_auto_military_desc:0 "§LState-of-the-art weapons and controllers are mounted in the frame of these cyborgs, greatly increasing the output of military and naval related local operations.§!"
 	trait_tec_cyborg_mainframe_auto_military_effect:0 "§YTODO ASCENSION§!"
  # /
  # --------------- Cortex Implants
@@ -1499,32 +1519,57 @@
 	trait_tec_cyborg_external_climate_multi_effect:0 "§YTODO ASCENSION§!"
 
  # /
- # --------------- OS Deck Implants
+ # --------------- Cyberdeck Implants
 	# Vanilla rescued
 	trait_tec_cyborg_deck_loyalty:0 "Loyal-IST Deck"
-	trait_tec_cyborg_deck_loyalty_desc:0 "§LThe operative system implanted on this species provide a direct connection with the empire database, serving as a reinforcement for direct propaganda and compliance with the global mottos.§!"
-	trait_tec_cyborg_deck_loyalty_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_loyalty_desc:0 "§LThe operative system implanted on this species provide a direct connection with the empire database, serving as a reinforcement for direct compliance with the global mottos.§!"
+	trait_tec_cyborg_deck_loyalty_effect:0 "§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§YTODO ASCENSION reduce deviancy and improve empire attraction§!"
 
 	trait_tec_cyborg_deck_trading:0 "U-Trade Lite Deck"
 	trait_tec_cyborg_deck_trading_desc:0 "§LMonitoring the stock exchanges, this implant adds an OS to this species that greatly motivates and improves the trading capacities of these species.§!"
-	trait_tec_cyborg_deck_trading_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_trading_effect:0 "§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§YTODO ASCENSION increase trade output and trade from living standards§!"
 
 	trait_tec_cyborg_deck_joywire:0 "IJoy Wire-link"
 	trait_tec_cyborg_deck_joywire_desc:0 "§LWhy have to worry when you can just have joy? This OS implant a constant stream of pleasurable and compfy apps in the neural capacity of this species, allowing a more happy existance (even if not absolutely efficient).§!"
-	trait_tec_cyborg_deck_joywire_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_joywire_effect:0 "§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§YTODO ASCENSION increase happiness and pops generate a bit of stability§!"
 	# T2
 	trait_tec_cyborg_deck_stappled:0 "Personality Nullifier"
 	trait_tec_cyborg_deck_stappled_desc:0 "§LAggressive modifications on neural exchangers, automatically controlled via internal OS module, completely nullifies the subject personality and negates any possible agency, subduing the individual to total obedience, generally paired with lack of self preservation and complete dedication to assigned tasks, regardless of necessity or maintenance.§!"
-	trait_tec_cyborg_deck_stappled_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_stappled_effect:0 "§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§YTODO ASCENSION remove happiness and allow specialists to be bla bla like previous§!"
 
 	trait_tec_cyborg_deck_servient:0 "Servient OS Deck"
 	trait_tec_cyborg_deck_servient_desc:0 "§LOverwriting certain parts of the user neural connections, this deck implants an Operating System module that ensures the complete subservience and fervency towards authority and implanted ideals.§!"
-	trait_tec_cyborg_deck_servient_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_servient_effect:0 "§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_deck_automodding:0 "Multi-OS Deck"
 	trait_tec_cyborg_deck_automodding_desc:0 "§LA coalescence of diverse skills and knowledge database is integrated in this deck Operating System module, allowing the immediate development of capacities for near any application conceivable.§!"
-	trait_tec_cyborg_deck_automodding_effect:0 "§YTODO ASCENSION§!"
+	trait_tec_cyborg_deck_automodding_effect:0 "$automodding_trait_tooltip_all$\n['concept_trait_tec_cyborg_deck_automodding_traits']\n\n§ECyberdeck Modifiers:§!\n  $tec_loc_pops$ $tec_loc_energy$ Upkeep: §R+$@tec_cyborg_module_t2_energy_upk$§!"
 
+	concept_trait_tec_cyborg_deck_automodding_traits:0 "Auto-Mod Trait List"
+	concept_trait_tec_cyborg_deck_automodding_traits_icon:0 "Auto-Mod Trait List"
+	concept_trait_tec_cyborg_deck_automodding_traits_help_icon:0 "£trigger_tec_question£"
+	concept_trait_tec_cyborg_deck_automodding_traits_desc:0 "Available Automoddable traits:\n- §Y$trait_tec_cyborg_deck_automodding$§! can get adapted to the following traits:\n  -['trait:trait_tec_cyborg_deck_auto_menial']\n- ['trait:trait_tec_cyborg_deck_auto_industrial']\n  -['trait:trait_tec_cyborg_deck_auto_intellectual']\n- ['trait:trait_tec_cyborg_deck_auto_military']"
+
+	# Automod modules
+	tec_deck_module_not_moddable:0 "£trigger_no£ §RThis cyberdeck is a progamming inclusion inside a $trait_tec_cyborg_deck_automodding$, and require the entire package to be moddable, never as standalone.§!"
+
+	trait_tec_cyborg_deck_auto_menial:0 "Cyberdeck: EX-tract"
+	trait_tec_cyborg_deck_auto_menial_desc:0 "§LHighly compressed compendium of tasks, directives and maps for easier and efficient extraction of resources.§!"
+	trait_tec_cyborg_deck_auto_menial_effect:0 "§LTODO§!"
+
+	trait_tec_cyborg_deck_auto_industrial:0 "Cyberdeck: IndustrIOs"
+	trait_tec_cyborg_deck_auto_industrial_desc:0 "§LHighly compressed compendium of tasks, directives and guidelines for a safer and more productive refinining of advanced elements.§!"
+	trait_tec_cyborg_deck_auto_industrial_effect:0 "§LTODO§!"
+
+	trait_tec_cyborg_deck_auto_intellectual:0 "Cyberdeck: Intelli-U"
+	trait_tec_cyborg_deck_auto_intellectual_desc:0 "§LHighly compressed compendium of societal and intellectual elements available for easier understanding, assimilation and exploration for further inventive processes.§!"
+	trait_tec_cyborg_deck_auto_intellectual_effect:0 "§LTODO§!"
+
+	trait_tec_cyborg_deck_auto_military:0 "Mili-Deck: Com.BAT"
+	trait_tec_cyborg_deck_auto_military_desc:0 "§LHighly compressed compendium of tactical and warfare elements allowing a more efficient development of non-direct approaches when it comes to combat.§!"
+	trait_tec_cyborg_deck_auto_military_effect:0 "§LTODO§!"
+
+	# Discarded
 	trait_tec_cyborg_deck_energy:0 "Generator Database"
 	trait_tec_cyborg_deck_energy_desc:0 "§LThis Database serve as a compendium of technical skills for controlling and maintaining generators, improving energy production efficiency.§!"
 	trait_tec_cyborg_deck_energy_effect:0 "§YTODO ASCENSION§!"
