--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -234,7 +234,18 @@
 	tec_loc_ascension_perks:0 "£unity£ Ascension Perks"
 	tec_loc_ascension_perk_plural:0 "$tec_loc_ascension_perks$"
 
-	tec_loc_species_modification: "£tec_genetics_icon£ Species Modification"
+	tec_loc_species_modification: "£tec_genetics_icon£ Organic Species Modification"
+	tec_loc_species_modification_point: "£tec_genetics_icon£ Organic Species Modification Point"
+	tec_loc_species_modification_points: "£tec_genetics_icon£ Organic Species Modification Points"
+	tec_loc_species_trait_pick: "£tec_genetics_icon£ Organic Species Trait Pick"
+	tec_loc_species_trait_picks: "£tec_genetics_icon£ Organic Species Trait Picks"
+
+	tec_loc_robotic_modification: "£job_roboticist£ Mechanical Species Modification"
+	tec_loc_robotic_modification_point: "£job_roboticist£ Mechanical Species Modification Point"
+	tec_loc_robotic_modification_points: "£job_roboticist£ Mechanical Species Modification Points"
+	tec_loc_robotic_trait_pick: "£job_roboticist£ Mechanical Species Trait Pick"
+	tec_loc_robotic_trait_picks: "£job_roboticist£ Mechanical Species Trait Picks"
+
 	tec_loc_xenocytes:0 "£tec_genetics_icon£ §YXenocytes§!"
 
 	tec_loc_cannot_reproduce:0 "§RCannot Reproduce Naturally§!"
@@ -295,6 +306,8 @@
  #Situations	# TODO CODE REWORK - ICON
 	tec_loc_situation:0 "Situation"
 	tec_loc_situation_icon:0 "£stability£"
+	tec_loc_agenda:0 "Agenda"
+	tec_loc_agenda_icon:0 "£stability£"
 
 	tec_loc_pop_cat_ruler: "£pop_cat_ruler£ $pop_cat_ruler$"
 	tec_loc_pop_cat_specialist: "£pop_cat_specialist£ $pop_cat_specialist$"
