ascension shenanigans II - UNSTABLE - Added recession mechanic - Added placeholders - Prepared cyb implementation posttest

--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -19,6 +19,7 @@ todo_ascension:0 ""
 	tec_ascension_approach_slow_risk:0 ""
 	tec_ascension_approach_standard_risk:0 ""
 	tec_ascension_approach_fast_risk:0 ""
+	tec_ascension_approach_recess:0 "The situation is on recess and its progress will go down to 0"
 
 	tec_adopt_ascension_approach_slow_risk:0 ""
 	tec_adopt_ascension_approach_standard_risk:0 ""
@@ -345,7 +346,7 @@ todo_ascension:0 ""
 
 	situation_tec_ascension_genetic_recombination_approach_recess:0 "On Recess"
 	situation_tec_ascension_genetic_recombination_approach_recess_desc:0 "This situation is on cooldown and will get its progress restarted."
-	situation_tec_ascension_genetic_recombination_approach_recess_tooltip:0 "$tec_ascension_approach_fast_recess$"
+	situation_tec_ascension_genetic_recombination_approach_recess_tooltip:0 "$tec_ascension_approach_recess$"
 	situation_tec_ascension_genetic_recombination_approach_recess_string:0 "$situation_tec_ascension_genetic_recombination_approach_recess$"
 
 	situation_tec_ascension_genetic_recombination_job_contribution:0 "From $job_tec_gene_recombinator$ jobs"
@@ -1078,6 +1079,11 @@ todo_ascension:0 ""
 	situation_tec_ascension_cybernetic_overclock_approach_fast_desc:0 "Pressing harder against the limits of our implants will ensure a faster development of a satisfactory overclock."
 	situation_tec_ascension_cybernetic_overclock_approach_fast_tooltip:0 "$tec_ascension_approach_fast_risk$"
 	situation_tec_ascension_cybernetic_overclock_approach_fast_string:0 "$situation_tec_ascension_cybernetic_overclock_approach_fast$"
+
+	situation_tec_ascension_cybernetic_overclock_approach_recess:0 "On Recess"
+	situation_tec_ascension_cybernetic_overclock_approach_recess_desc:0 "This situation is on cooldown and will get its progress restarted."
+	situation_tec_ascension_cybernetic_overclock_approach_recess_tooltip:0 "$tec_ascension_approach_recess$"
+	situation_tec_ascension_cybernetic_overclock_approach_recess_string:0 "$situation_tec_ascension_cybernetic_overclock_approach_recess$"
 
 	situation_tec_ascension_cybernetic_overclock_job_contribution:0 "From £tec_cybernetics_icon£ Augmentation jobs"
 	situation_tec_ascension_cybernetic_overclock_job_contribution_gestalt:0 "From £tec_cybernetics_icon£ Augmentation Drones"
@@ -2151,8 +2157,10 @@ todo_ascension:0 ""
  # --------------- GENE T2 RESEQUENCE MECHANIC
 	# Main
 	tec_gene_path.500.name:0 "Genetic Recombination"
-	tec_gene_path.500.desc.regular:0 "We have prepared a big batch of gathered genetic data for a long-term recombination, trying to find positive elements and refining new strains usable for our species.\n\nWe just need to decide how to approach these new changes."
-	tec_gene_path.500.desc.hive:0 "$tec_gene_path.500.desc.regular$"
+	tec_gene_path.500.desc.regular:0 "The first large scale attempt at a perfected modification of genetic data is ready.\nWe have increased the dedicated resources towards our geneticists and we are prepared for a long-term recombination of positive genes, trying to find positive elements and refining new strains usable for our species.\n\nIt is up to us to decide how to approach these new changes."
+	tec_gene_path.500.desc.regular.repeatable:0 "We have prepared a big batch of gathered genetic data for a long-term recombination, trying to find positive elements and refining new strains usable for our species.\n\nIt is time to decide how we want to approach this project."
+	tec_gene_path.500.desc.hive:0 "The first large scale attempt at a perfected modification of genetic data is ready.\nWe have increased the dedicated resources towards our gene-weaver drones and we are prepared for a long-term recombination of positive genes, trying to find positive elements and refining new strains usable for our collective.\n\nIt is up to us to decide how to approach these new changes."
+	tec_gene_path.500.desc.hive.repeatable:0 "$tec_gene_path.500.desc.regular.repeatable$"
 	tec_gene_path.500.slow:0 "Follow a slow recombination"
 	tec_gene_path.500.slow.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_gene_path.500.standard:0 "Proceed with normal standards"
@@ -2990,7 +2998,7 @@ todo_ascension:0 ""
 	tec_cybernetic_path.27501.desc.biohive:0 "$tec_cybernetic_path.27501.desc.regular$"
 	tec_cybernetic_path.27501.desc.machine:0 "$tec_cybernetic_path.27501.desc.regular$"
 	tec_cybernetic_path.27501.investigate.regular:0 "Monitor the situation closely"
-	tec_cybernetic_path.27501.investigate.regular.tooltip:0 "We will observe any irregularity closer amongst our cybernetic spcies"
+	tec_cybernetic_path.27501.investigate.regular.tooltip:0 "We will observe any irregularity closer amongst our cybernetic species"
 	tec_cybernetic_path.27501.investigate.gestalt:0 "We will monitor our drones closely"
 	tec_cybernetic_path.27501.investigate.gestalt.tooltip:0 "$tec_cybernetic_path.27501.investigate.regular.tooltip$"
 
