ascension shenanigans IV - SEMI STABLE - More cybernetic trait polish pre out

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1402,7 +1402,7 @@
 
 	trait_tec_cyborg_cortex_memory:0 "Neural Emulator"
 	trait_tec_cyborg_cortex_memory_desc:0 "§LA series of artificial interchange neural sub-webs co-reinforce the mind of this species, allocating thoughts at a higher speed between areas of the brain.§!"
-	trait_tec_cyborg_cortex_memory_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Leader Negative traits: §G$trait_tec_cyborg_cortex_memory_leader_neg_trait_rate$§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t2_energy_upk_high$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YCortex§! modifiers increased by §G$@trait_tec_cyborg_cortex_memory_boost_rate$%§!\nUpkeep of §YCortex§! modifiers increased by §R$@tec_cyborg_module_t2_selfboost_tt$%§!"
+	trait_tec_cyborg_cortex_memory_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Leader Negative traits: §G$@trait_tec_cyborg_cortex_memory_leader_neg_trait_rate$§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t2_energy_upk_high$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YCortex§! modifiers increased by §G$@trait_tec_cyborg_cortex_memory_boost_rate$%§!\nUpkeep of §YCortex§! modifiers increased by §R$@tec_cyborg_module_t2_selfboost_tt$%§!"
 	# ^ TODO ASCENSION increase bureaucrat and alike output base
 
 	trait_tec_cyborg_cortex_relic:0 "Relic Databank"
@@ -1472,11 +1472,11 @@
 
 	trait_tec_cyborg_external_aesthetic:0 "Aesthetic implants"
 	trait_tec_cyborg_external_aesthetic_desc:0 "§LBecause effectivity is not only the most important thing this species values, the degree of cosmetic and day-to-day use of prosthetics and appearance alterators is a common practice in their society.§!"
-	trait_tec_cyborg_external_aesthetic_effect:0 "§EExternal Modifiers:§!\n$tec_loc_minitab$$mod_pop_happiness$: §G+$@trait_tec_cyborg_external_aesthetic_happinness_rate_tt$§!\n$tec_loc_minitab$$mod_leader_envoys_unity_produces_add$: §G+$@trait_tec_cyborg_external_aesthetic_envoy_unity_rate$§!"
+	trait_tec_cyborg_external_aesthetic_effect:0 "§EExternal Modifiers:§!\n$tec_loc_minitab$$MOD_POP_HAPPINESS$: §G+$@trait_tec_cyborg_external_aesthetic_happinness_rate_tt$§!\n$tec_loc_minitab$$mod_leader_envoys_unity_produces_add$: §G+$@trait_tec_cyborg_external_aesthetic_envoy_unity_rate$§!"
 
 	trait_tec_cyborg_external_skin:0 "Chromo-Mimetic Dermis"
 	trait_tec_cyborg_external_skin_desc:0 "§LA thin coating of chromo-mimetic skin serves as a new layer of defense for the body, acting as an external caparace of sorts, protecting from environment, hazards or any type of particle, while also augmenting the overall looks of the species on demand.§!"
-	trait_tec_cyborg_external_skin_effect:0 "$tec_loc_habitability$: §G+$@trait_tec_cyborg_external_skin_habitability_rate$§!\n\n§EExternal Modifiers:§!\n$tec_loc_minitab$$MOD_ARMY_HEALTH$: §G+$@trait_tec_cyborg_external_skin_army_health_rate_tt$§!\n$tec_loc_minitab$$mod_planet_entertainers_produces_mult$: §G+$@trait_tec_cyborg_external_skin_entertainer_boost_rate_tt$§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_low_tt$%§!"
+	trait_tec_cyborg_external_skin_effect:0 "$tec_loc_habitability$: §G+$@trait_tec_cyborg_external_skin_habitability_rate$§!\n\n§EExternal Modifiers:§!\n$tec_loc_minitab$$MOD_ARMY_HEALTH$: §G+$@trait_tec_cyborg_external_skin_army_health_rate_tt$%§!\n$tec_loc_minitab$$mod_planet_entertainers_produces_mult$: §G+$@trait_tec_cyborg_external_skin_entertainer_boost_rate_tt$%§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_low_tt$%§!"
 
 	trait_tec_cyborg_external_connector:0 "Techno-Connectors"
 	trait_tec_cyborg_external_connector_desc:0 "§LExo-packs connect several cybernetic implants with central processors in a more efficient way than direct connectors, improving compatibility between implants and body.§!"
@@ -1505,7 +1505,7 @@
 
 	trait_tec_cyborg_external_climate_multi:0 "Adaptive Cyber-Shelting"
 	trait_tec_cyborg_external_climate_multi_desc:0 "§LSeveral micro-apparatus alter the physionomy of the grafted to mitigate the potential external factors affecting the body or different cybernetic components, serving also as a connectivity element for more efficient functioning.§!"
-	trait_tec_cyborg_external_climate_multi_effect:0 "$tec_loc_habitability$: §G+$@trait_tec_cyborg_external_climate_multi_habitability_rate_tt$§!\n\n§EExternal Modifiers:§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t2_amenities_upk_tt$%§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency and Upkeep of §YALL§! Cybernetic modifiers increased by §Y+$@trait_tec_cyborg_external_climate_multi_boost_rate_tt$%§!"
+	trait_tec_cyborg_external_climate_multi_effect:0 "$tec_loc_habitability$: §G+$@trait_tec_cyborg_external_climate_multi_habitability_rate_tt$%§!\n\n§EExternal Modifiers:§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t2_amenities_upk_tt$%§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency and Upkeep of §YALL§! Cybernetic modifiers increased by §Y+$@trait_tec_cyborg_external_climate_multi_boost_rate_tt$%§!"
 
 	# not done
 	trait_tec_cyborg_external_servos:0 "Support Servos"
